--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/Androz2091/ljdc-bot#readme",
   "dependencies": {
     "discord.js": "^11.5.1",
-    "jsdom": "^15.2.0"
+    "jsdom": "^15.2.0",
+    "node-fetch": "^2.6.1"
   }
 }
